# monoai

./: .env.example  .gitignore  .gitmodules  DECISIONS.md  Makefile  README.md  chat.py  docker-compose.dev.yml  docker-compose.yml  monoai_integration_prompt.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: .env.example  README.md  __main__.py  agent_config.py  buffer.py  client.py  enroll.py  identity.py  policy_cache.py  pyproject.toml  runner.py  sentinel.py
bench/: README.md  REPORT.md  harness.py  run_all.py  run_latency_bench.py  run_pii_bench.py  run_router_bench.py
bench/corpora/: generate_injection_corpus.py  generate_pii_corpus.py  generate_routing_corpus.py  train_injection_classifier.py  train_router_classifier.py
bench/results/: latest.json
core/: pyproject.toml
core/audit/: chain.py  evidence.py  forward_queue.py  signer.py  signing.py  sinks.py
core/contracts/: agent.py  audit.py  policy.py  scan.py  spans.py
core/detect/: normalize.py  pipeline.py  sentence_split.py  span.py
core/detect/packs/base_en/: pack.py
core/detect/packs/base_en/models/: injection_classifier.pkl  router_classifier.pkl
core/detect/packs/gulf_ar/: README.md  ids.py  morphology.py  pack.py
core/detect/stages/: injection_judge.py  injection_stage.py  locked_span_stage.py  ner_stage.py  regex_stage.py  secrets_stage.py  span_merge.py  span_repair.py
core/policy/: engine.py  schema.py  store.py
core/vault/: box.py  crypto.py  session_tokens.py
core/vault/storage/: base.py  postgres_store.py  sqlite_store.py
filescan-worker/: README.md  app.py  extract.py  jobs.py  pyproject.toml  scan.py
gateway/: app.py  audit_dedupe.py  config.py  filescan.py  key_events.py  key_forward_hook.py  key_forwarder.py  orchestrator.py  pii.py  provider_sync.py  pyproject.toml  streaming.py  transaction_forwarder.py
gateway/agents/: keys.py  store.py
gateway/api/: admin.py  agents.py  auth.py  chat.py  evidence.py  files.py  health.py  metrics.py
gateway/auth/: admin_account_store.py  errors.py  middleware.py  models.py  postgres_key_store.py  rate_limit.py  store.py  transaction_store.py  user_account_store.py
gateway/obs/: metrics.py  otel.py  tracing.py
gateway/providers/: base.py  circuit_breaker.py  dynamic_router.py  fallback_chain.py  ollama.py  openai_compatible.py  registry_store.py  retry.py  stub.py
gateway/router/: contracts.py  embedding_classifier.py  embedding_router.py  heuristic.py  normalizer.py
mcp-firewall/: README.md  config.py  proxy.py  pyproject.toml  rules.py  scanner.py  tool_rules.yaml
monoai_gateway/: app.py  audit.py  config.py  orchestrator.py  pii.py  providers.py
ner-sidecar/: README.md
policies/: default.yaml  finance_strict.yaml  gulf_sovereign.yaml
scripts/: migrate_sqlite_to_postgres.py  rehash_audit_chain.py  verify_audit_chain.py
tests/: test_orchestrator.py
tests/adversarial/: test_rehydration_safety_property.py
tests/integration/: test_agent_end_to_end.py  test_agent_manager.py  test_audit_forwarding_e2e.py  test_auth.py  test_chat_orchestrator.py  test_dynamic_provider_routing.py  test_fallback.py  test_key_forwarding_e2e.py  test_multiturn.py  test_output_scan.py  test_policy.py  test_postgres_audit_sink.py  test_postgres_vault.py  test_provider_sync_e2e.py  test_register_key_forwarding.py  test_streaming.py  test_transaction_forwarding_e2e.py
tests/unit/: test_agent_buffer.py  test_agent_store.py  test_audit_chain.py  test_audit_chain_compat.py  test_audit_forward_queue.py  test_audit_sinks.py  test_bench_harness.py  test_circuit_breaker.py  test_contracts.py  test_detect_pipeline.py  test_dynamic_router.py  test_evidence_signing.py  test_forwarding_sink.py  test_injection.py  test_key_forwarder.py  test_key_store.py  test_locked_spans.py  test_ner_stage.py  test_normalize.py  test_obs.py  test_openai_compatible_cost_extraction.py  test_policy_engine.py  test_policy_schema.py  test_policy_store.py  test_rate_limit.py  test_regex.py  test_registry_store.py  test_repo_hygiene.py  test_router_cascade.py  test_sentence_split.py  test_session_tokens.py  test_span_merge.py  test_span_repair.py  test_sqlite_store.py  test_vault_crypto.py  test_vault_ttl_erasure.py  test_verify_audit_chain_script.py  test_webhook_sink.py
web/: .env.example  README.md  index.html  metadata.json  package-lock.json  package.json  server.ts
web/src/: App.tsx  index.css  main.tsx  types.ts
web/src/components/: ArtifactPanel.tsx  ChatArea.tsx  CodeBlock.tsx  GuardrailAlert.tsx  InputCapsule.tsx  ModelsDirectory.tsx  ProjectsPanel.tsx  Sidebar.tsx  SignIn.tsx
web/src/components/admin/: AdminDashboard.tsx  AuditLogTab.tsx  GuardrailsTab.tsx  OverviewTab.tsx  ProvidersTab.tsx  RbacTab.tsx  SettingsTab.tsx  UsersTab.tsx
web/src/context/: GatewayContext.tsx
web/src/data/: models.ts
