[project]
name = "monoai-workspace"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["core", "gateway", "filescan-worker", "mcp-firewall", "agent"]

[tool.uv.sources]
monoai-core = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# UP042/UP047: str+Enum -> StrEnum, generic function syntax -- valid
# Python 3.12 idioms, but StrEnum has subtly different str()/repr()
# behavior that could affect pydantic JSON serialization; left as a
# deliberate style choice for a dedicated pass, not a Phase 1 blocker.
ignore = ["UP042", "UP047"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["core", "gateway"]
