[project]
name = "monoai-core"
version = "0.1.0"
description = "MonoAI Gateway 2.0 — shared detection/policy/vault/audit library (no service code)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "cryptography>=41",
    "pynacl>=1.5",
    "redis>=5",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contracts", "detect", "policy", "vault", "audit"]
