[project]
name = "monoai-filescan-worker"
version = "0.1.0"
description = "MonoAI Gateway 2.0 — file/media scanning sub-service (G16, Phase 3)"
requires-python = ">=3.12"
dependencies = [
    "monoai-core",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
]

[tool.uv.sources]
monoai-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app.py", "extract.py", "jobs.py", "scan.py"]
