[project]
name = "monoai-gateway"
version = "0.1.0"
description = "MonoAI Gateway 2.0 — FastAPI gateway service"
requires-python = ">=3.12"
dependencies = [
    "monoai-core",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "uvloop>=0.19",
    "orjson>=3.10",
    "httpx>=0.27",
    "redis>=5",
    "pydantic>=2.7",
]

[tool.uv.sources]
monoai-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app.py", "config.py", "api", "auth", "streaming.py", "router", "providers"]
