[project]
name = "monoai-mcp-firewall"
version = "0.1.0"
description = "MonoAI Gateway 2.0 — MCP tool-call firewall proxy (Phase 4)"
requires-python = ">=3.12"
dependencies = [
    "monoai-core",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "redis>=5",
    "pyyaml>=6.0",
]

[tool.uv.sources]
monoai-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["proxy.py", "rules.py", "scanner.py", "config.py"]
